--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -1,3 +1,8 @@
-.show{
+.dontShow{
     display:none;
 }
+#container{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  }
