--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -1,6 +1,6 @@
-.dontShow{
-    display:none;
-}
+/* .dontShow{ */
+    /* display:none; */
+/* } */
 #container{
     display: flex;
     justify-content: center;
