--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,7 @@ body {
 }
 
 #title {
+  text-align: center;
   font-size: 50px;
   font-family: 'Permanent Marker', cursive;
 }
@@ -15,3 +16,11 @@ body {
   background-color: lightgreen;
 }
 
+#questionbox{
+  display: flex;
+  justify-content: center;
+}
+
+button{
+  cursor: pointer;
+}
