--- a/src/css/Question.css
+++ b/src/css/Question.css
@@ -6,3 +6,12 @@
     justify-content: center;
     flex-direction: row;
   }
+  button{
+      cursor: pointer;
+      font-weight: bold;
+      font-size: 20px;
+      width:150px;
+      color: black;
+      background-color: rgb(255,105,180)
+
+  }
